samples/_failures_safe/1761535649_f4b88e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f376e6f.c: In function ‘main’:
./samples/SAFE/__tmp_6f376e6f.c:126:5: error: expected declaration or statement at end of input
  126 |     init_analyzer(&analyzer);
      |     ^~~~~~~~~~~~~
